--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   http: ^0.13.4
   flutter_screenutil: ^5.4.0
   flutter_svg: ^1.0.3
+  shared_preferences: ^2.0.13
+  flutter_spinkit: ^5.1.0
+  email_validator: ^2.0.1
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ flutter:
 
   assets:
    - assets/images/
+   - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
