Integrated List car endpoint

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CUSTOMER_BASE_URL = https://xgyugsyhu1.execute-api.us-east-1.amazonaws.com/dev/customer/v1
 CORE_BASE_URL = https://05r83lri5a.execute-api.us-east-1.amazonaws.com/dev/core/v1
+CAR_BASE_URL = https://c3qawarxhc.execute-api.us-east-1.amazonaws.com/dev/car/v1
