--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Select car images</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Take a picture of your car</string>
 </dict>
 </plist>
