--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   flutter_spinkit: ^5.1.0
   email_validator: ^2.0.1
   pin_code_fields: ^7.4.0
+  rxdart: ^0.27.3
+  image_picker: ^0.8.5
+  share_plus: ^4.0.4
+  cached_network_image: ^3.2.0
+  flutter_staggered_grid_view: ^0.6.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
